--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(43deg, #4158d0 12%, #c850c0 49%, #ffcc70 99%)
     no-repeat;
+    min-height: 100vh;
 }
 
 code {
